--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,7 @@
       }
       canvas {
         display: block;
-        vertical-align: bottom;
-      } /* ---- particles.js container ---- */
+      }
       #particles-js {
         position: absolute;
         width: 100%;
@@ -32,38 +31,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 50%;
-      } /* ---- stats.js ---- */
-      .count-particles {
-        background: #000022;
-        position: absolute;
-        top: 48px;
-        left: 0;
-        width: 80px;
-        color: #13e8e9;
-        font-size: 0.8em;
-        text-align: left;
-        text-indent: 4px;
-        line-height: 14px;
-        padding-bottom: 2px;
-        font-family: Helvetica, Arial, sans-serif;
-        font-weight: bold;
-      }
-      .js-count-particles {
-        font-size: 1.1em;
-      }
-      #stats,
-      .count-particles {
-        -webkit-user-select: none;
-        margin-top: 5px;
-        margin-left: 5px;
-      }
-      #stats {
-        border-radius: 3px 3px 0 0;
-        overflow: hidden;
-      }
-      .count-particles {
-        border-radius: 0 0 3px 3px;
-      }
+      } 
     </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -90,8 +58,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
       particlesJS("particles-js", {
         particles: {
@@ -154,27 +121,6 @@
         },
         retina_detect: true,
       });
-      var count_particles, stats, update;
-      stats = new Stats();
-      stats.setMode(0);
-      stats.domElement.style.position = "absolute";
-      stats.domElement.style.left = "0px";
-      stats.domElement.style.top = "0px";
-      document.body.appendChild(stats.domElement);
-      count_particles = document.querySelector(".js-count-particles");
-      update = function () {
-        stats.begin();
-        stats.end();
-        if (
-          window.pJSDom[0].pJS.particles &&
-          window.pJSDom[0].pJS.particles.array
-        ) {
-          count_particles.innerText =
-            window.pJSDom[0].pJS.particles.array.length;
-        }
-        requestAnimationFrame(update);
-      };
-      requestAnimationFrame(update);
     </script>
   </body>
 </html>
